[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.6", features = ["runtime-tokio", "sqlite"] }
validator = "0.15"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[
dev-dependencies
]
actix-rt = "2.7"